src/css/variablesCustom.css
/* ... */
/* color schemes */
:root {
  --color-scheme-four-background-color: #F4F4F4;
  --color-scheme-four-color: var(--color);
  --color-scheme-one-background-color: #7124A7;
  --color-scheme-one-color: #DFEA52;
  --color-scheme-three-background-color: #F8C9DF;
  --color-scheme-three-color: #0E6265;
  --color-scheme-two-background-color: #BFE9FF;
  --color-scheme-two-color: #5B3A47;
  --grid-12er-color-scheme-four-background-color: var(--color-scheme-four-background-color);
}
/* header has a breakpoint of (mobile-breakpoint="100000000px"), due to that, it is always in mobile mode. The below allows the actual mobile settings/overwrites below 1200px, same as in the Environments.js */
@media only screen and (max-width: 767px) {
  :root {
    --ArrowUpRight-svg-transform: translate(-0.3em, 0.35em);
    --h6-font-size: var(--h5-font-size);
    --header-default-content-spacing-mobile: 3em;
    --header-default-font-size-mobile: var(--font-size-mobile);
    --header-default-height-mobile-custom: 8.155em;
    --header-default-padding-mobile: 4.23em var(--content-spacing-mobile) 1.231em;
    --menu-icon-font-size: 1.35em;
    --navigation-default-with-styles-language-switcher-align-items-mobile: flex-start;
    --navigation-default-with-styles-language-switcher-flex-direction: column;
    --navigation-default-with-styles-language-switcher-gap-mobile: 0.62em;
    --navigation-default-with-styles-language-switcher-padding: 1.31rem var(--content-spacing-mobile) 0;
  }
}

